binutils-pru (2.41-0bbbio0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/changelog
+++ b/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-binutils-pru (2.41-0bbbio0~focal+20230804) focal; urgency=low
+binutils-pru (2.41-0bbbio0~bookworm+20230804) bookworm; urgency=low
 
   * Bump to mainline version 2.41.
 
