--- a/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/changelog
+++ b/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/changelog
@@ -1,16 +1,22 @@
-binutils-pru (2.38-0rcnee5~bullseye+20220304) bullseye; urgency=low
+binutils-pru (2.41-0bbbio0~bullseye+20230804) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Bump to mainline version 2.41.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Mar 2022 13:51:10 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Aug 2023 16:16:41 -0500
 
-binutils-pru (2.38-0rcnee4~bionic+20200321) bullseye; urgency=low
+binutils-pru (2.41) bullseye; urgency=low
+
+  * Binutils 2.41.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Mon, 31 Jul 2023 21:14:12 +0200
+
+binutils-pru (2.38) bullseye; urgency=low
 
   * Binutils 2.38 official release.
 
  -- Dimitar Dimitrov <dimitar@dinux.eu>  Sun, 13 Feb 2022 15:24:12 +0200
 
-binutils-pru (2.37.50.g2749ac13-0rcnee4~bullseye+20200321) bullseye; urgency=low
+binutils-pru (2.37.50.g2749ac13) bullseye; urgency=low
 
   * Binutils 2.37.50, mainline commit 2749ac133972d027fe9482acc81f6e88c4f36812.
   * Fix handling of .pri_irq_map section.
@@ -18,47 +24,11 @@ binutils-pru (2.37.50.g2749ac13-0rcnee4~bullseye+20200321) bullseye; urgency=low
 
  -- Dimitar Dimitrov <dimitar@dinux.eu>  Sun, 12 Dec 2021 20:54:12 +0200
 
-binutils-pru (2.34-0rcnee4~bullseye+20200321) bullseye; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 21 Mar 2020 11:19:36 -0500
-
-binutils-pru (2.34-0rcnee3~bullseye+20200321) bullseye; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 21 Mar 2020 11:12:06 -0500
-
-binutils-pru (2.34-0rcnee2~bullseye+20200318) bullseye; urgency=low
+binutils-pru (2.34) bullseye; urgency=low
 
   * Bump to mainline version 2.34.
 
  -- Dimitar Dimitrov <dimitar@dinux.eu>  Wed, 18 Mar 2020 20:54:12 +0200
-
-binutils-pru (2.30.51.20180310-0rcnee2~buster+20180425) buster; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 25 Apr 2018 21:03:15 -0500
-
-binutils-pru (2.30.51.20180310-0rcnee1~buster+20180424) buster; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 24 Apr 2018 21:00:55 -0500
-
-binutils-pru (2.30.51.20180310-0rcnee0~buster+20180424) buster; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 24 Apr 2018 20:50:19 -0500
-
-binutils-pru (2.30.51.20180310~buster+20180320) buster; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 20 Mar 2018 09:11:45 -0500
 
 binutils-pru (2.30.51.20180310) stretch; urgency=medium
 
@@ -67,35 +37,11 @@ binutils-pru (2.30.51.20180310) stretch; urgency=medium
 
  -- Dimitar Dimitrov <dinux@tpdeb>  Mon, 12 Mar 2018 20:54:12 +0200
 
-binutils-pru (2.28.51.20170530~stretch+20170925) stretch; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 25 Sep 2017 12:23:42 -0500
-
-binutils-pru (2.28.51.20170530) stretch; urgency=medium
-
-  * Rebased to upstream.
-
- -- Dimitar Dimitrov <dinux@tpdeb>  Thu, 21 Sep 2017 21:25:56 +0300
-
-binutils-pru (2.28.51.20170102-0rcnee0~bpo80+20170102+1) jessie; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 02 Jan 2017 11:03:06 -0600
-
 binutils-pru (2.28.51.20170102) jessie; urgency=medium
 
   * A few fixes for 32-bit hosts.
 
  -- Dimitar Dimitrov <dinux@tpdeb>  Mon, 02 Jan 2017 11:45:54 +0200
-
-binutils-pru (2.28.51.20161231-0rcnee0~bpo80+20170101+1) jessie; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Sun, 01 Jan 2017 12:50:03 -0600
 
 binutils-pru (2.28.51.20161231) jessie; urgency=medium
 
