--- a/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/changelog
+++ b/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/changelog
@@ -1,3 +1,9 @@
+binutils-pru (2.41-0bbbio1~bookworm+20230804) bookworm; urgency=low
+
+  * Bump to mainline version 2.41.
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Aug 2023 16:35:06 -0500
+
 binutils-pru (2.41-0bbbio0~bookworm+20230804) bookworm; urgency=low
 
   * Bump to mainline version 2.41.
