--- a/gcc-pru-debian-11-12-ubuntu-2004-2204/suite/focal/debian/changelog
+++ b/gcc-pru-debian-11-12-ubuntu-2004-2204/suite/focal/debian/changelog
@@ -1,44 +1,26 @@
-gcc-pru (12.1.0-0rcnee0~focal+20220510) focal; urgency=low
+gcc-pru (13.2.0-0bbbio0~focal+20230804) focal; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 10 May 2022 09:51:08 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Aug 2023 20:21:19 -0500
 
-gcc-pru (12.0.RC.gaeedb00a1a-0rcnee1~focal+20211223) focal; urgency=low
+gcc-pru (13.2.0) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Bump to GCC mainline 13.2.0
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 23 Dec 2021 15:52:26 -0600
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Mon, 31 Jul 2023 22:59:11 +0200
 
-gcc-pru (12.0.RC.gaeedb00a1a-0rcnee0~bullseye+20200903) bullseye; urgency=low
+gcc-pru (12.0.RC.gaeedb00a1a) bullseye; urgency=low
 
   * Bump to GCC mainline commit aeedb00a1ae2ccd10b1a5f00ff466081aeadb54b.
 
  -- Dimitar Dimitrov <dimitar@dinux.eu>  Sun, 12 Dec 2021 21:59:11 +0200
 
-gcc-pru (10.1.0-0rcnee2~bullseye+20200903) bullseye; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 03 Sep 2020 13:04:14 -0500
-
-gcc-pru (10-20200315-0rcnee2~bullseye+20200321) bullseye; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 21 Mar 2020 12:54:31 -0500
-
-gcc-pru (10-20200315-0rcnee1~bullseye+20200318) bullseye; urgency=medium
+gcc-pru (10-20200315) bullseye; urgency=medium
 
   * Switch to mainline snapshot version.
 
  -- Dimitar Dimitrov <dimitar@dinux.eu>  Wed, 18 Mar 2020 20:59:11 +0200
-
-gcc-pru (8.0.1.20180310-0rcnee1~buster+20180425) buster; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 25 Apr 2018 20:58:39 -0500
 
 gcc-pru (8.0.1.20180310) stretch; urgency=medium
 
@@ -47,23 +29,11 @@ gcc-pru (8.0.1.20180310) stretch; urgency=medium
 
  -- Dimitar Dimitrov <dinux@tpdeb>  Mon, 12 Mar 2018 20:59:11 +0200
 
-gcc-pru (8.0.0.20170530-0rcnee0~stretch+20170925) stretch; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 25 Sep 2017 13:01:43 -0500
-
 gcc-pru (8.0.0.20170530) stretch; urgency=medium
 
   * Optimized arithmetic shift right. Fixes github issue #25.
 
  -- Dimitar Dimitrov <dinuxbg@gmail.com>  Thu, 21 Sep 2017 21:48:38 +0300
-
-gcc-pru (7.0.0.20161219-0rcnee0~bpo80+20170102+1) jessie; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 02 Jan 2017 12:03:36 -0600
 
 gcc-pru (7.0.0.20161219) jessie; urgency=medium
 
@@ -71,12 +41,6 @@ gcc-pru (7.0.0.20161219) jessie; urgency=medium
   * Removed leading underscore for symbols for better TI ABI compatibility.
 
  -- Dimitar Dimitrov <dinux@tpdeb>  Sat, 31 Dec 2016 10:50:00 +0200
-
-gcc-pru (7.0.0.20160801-0rcnee0~bpo80+20160803+1) jessie; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Aug 2016 08:07:56 -0500
 
 gcc-pru (7.0.0.20160801) unstable; urgency=medium
 
