bbb.io-kernel (1.20230807.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,9 +1,11 @@
-bbb.io-kernel (1.20230801.0-0~bullseye+20230801) bullseye; urgency=low
+bbb.io-kernel (1.20230807.0-0~bullseye+20230807) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r68
-  * linux-image-5.10.168-ti-rt-r68
-  * linux-image-6.5.0-rc4-bone4
+  * linux-image-5.10.168-ti-r69
+  * linux-image-5.10.168-ti-rt-r69
+  * linux-image-6.3.13-bone16
+  * linux-image-6.4.6-bone14
+  * linux-image-6.5.0-rc5-bone5
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 01 Aug 2023 09:14:15 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 07 Aug 2023 20:05:12 -0500
 
