gnuprumcu (0.9.4-git20230525.0-0bbbio1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/gnuprumcu-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/changelog
+++ b/gnuprumcu-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/changelog
@@ -1,8 +1,24 @@
-gnuprumcu (0.7.0-git20211212.0-0rcnee0~bullseye+20211224) bullseye; urgency=low
+gnuprumcu (0.9.4-git20230525.0-0bbbio1~bullseye+20230816) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Add I/O header for am62x.
+  * Fix bit field length in AM572x's SPP register.
+  * Add linker commands to align sections.
+  * Add TDA4VM (J721E) specs and headers.
+  * Add alias macros used by TI examples.
+  * Add AM62x specs.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 24 Dec 2021 14:31:17 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 16 Aug 2023 15:11:15 -0500
+
+gnuprumcu (0.9.4) unstable; urgency=medium
+
+  * Add I/O header for am62x.
+  * Fix bit field length in AM572x's SPP register.
+  * Add linker commands to align sections.
+  * Add TDA4VM (J721E) specs and headers.
+  * Add alias macros used by TI examples.
+  * Add AM62x specs.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Fri, 26 May 2023 22:16:58 +0200
 
 gnuprumcu (0.7.0) unstable; urgency=medium
 
@@ -32,18 +48,6 @@ gnuprumcu (0.4.0) unstable; urgency=medium
   * Fixed am437x IMEM size for ICSS1.
 
  -- Dimitar Dimitrov <dimitar@dinux.eu>  Sat, 28 Nov 2020 10:02:00 +0200
-
-gnuprumcu (0.3.0-git20200828.0-0rcnee0~bullseye+20200903) bullseye; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 03 Sep 2020 21:38:15 -0500
-
-gnuprumcu (0.2.1-git20191109.0-0rcnee0~bullseye+20200321) bullseye; urgency=low
-
-  * Rebuild for repos.rcn-ee.com
-
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 21 Mar 2020 10:50:40 -0500
 
 gnuprumcu (0.2.1) bullseye; urgency=medium
 
