--- a/gnuprumcu-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/changelog
+++ b/gnuprumcu-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-gnuprumcu (0.9.4-git20230525.0-0bbbio1~focal+20230816) focal; urgency=low
+gnuprumcu (0.9.4-git20230525.0-0bbbio1~bookworm+20230816) bookworm; urgency=low
 
   * Add I/O header for am62x.
   * Fix bit field length in AM572x's SPP register.
