gnuprumcu (0.9.4-git20230525.0-0bbbio2)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/gnuprumcu-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/changelog
+++ b/gnuprumcu-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/changelog
@@ -1,3 +1,15 @@
+gnuprumcu (0.9.4-git20230525.0-0bbbio2~bullseye+20230816) bullseye; urgency=low
+
+  * Add I/O header for am62x.
+  * Fix bit field length in AM572x's SPP register.
+  * Add linker commands to align sections.
+  * Add TDA4VM (J721E) specs and headers.
+  * Add alias macros used by TI examples.
+  * Add AM62x specs.
+  * --without-toolchain-check
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 16 Aug 2023 15:55:58 -0500
+
 gnuprumcu (0.9.4-git20230525.0-0bbbio1~bullseye+20230816) bullseye; urgency=low
 
   * Add I/O header for am62x.
