bb-u-boot-omap3-beagle (2023.10.20230821.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-omap3-beagle/suite/bullseye/debian/install
+++ b/bb-u-boot-omap3-beagle/suite/bullseye/debian/install
@@ -1,2 +1,2 @@
-u-boot/MLO /opt/u-boot/bb-u-boot-omap3-beagle
-u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-omap3-beagle
+tmp/u-boot/MLO /opt/u-boot/bb-u-boot-omap3-beagle
+tmp/u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-omap3-beagle
