--- a/bb-u-boot-omap3-beagle/suite/buster/debian/install
+++ b/bb-u-boot-omap3-beagle/suite/buster/debian/install
@@ -1,2 +1,2 @@
-u-boot/MLO /opt/u-boot/bb-u-boot-omap3-beagle
-u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-omap3-beagle
+tmp/u-boot/MLO /opt/u-boot/bb-u-boot-omap3-beagle
+tmp/u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-omap3-beagle
