bb-u-boot-am57xx-evm-rc (2023.10.20230821.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am57xx-evm-rc/suite/bullseye/debian/install
+++ b/bb-u-boot-am57xx-evm-rc/suite/bullseye/debian/install
@@ -1,5 +1,5 @@
-debian/install.sh /opt/u-boot/bb-u-boot-am57xx-evm-beta
-debian/install-mmcblk0.sh /opt/u-boot/bb-u-boot-am57xx-evm-beta
-debian/install-mmcblk1.sh /opt/u-boot/bb-u-boot-am57xx-evm-beta
-u-boot/MLO /opt/u-boot/bb-u-boot-am57xx-evm-beta
-u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-am57xx-evm-beta
+debian/install.sh /opt/u-boot/bb-u-boot-am57xx-evm-rc
+debian/install-mmcblk0.sh /opt/u-boot/bb-u-boot-am57xx-evm-rc
+debian/install-mmcblk1.sh /opt/u-boot/bb-u-boot-am57xx-evm-rc
+tmp/u-boot/MLO /opt/u-boot/bb-u-boot-am57xx-evm-rc
+tmp/u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-am57xx-evm-rc
