--- a/bb-u-boot-am57xx-evm-rc/suite/jammy/debian/changelog
+++ b/bb-u-boot-am57xx-evm-rc/suite/jammy/debian/changelog
@@ -1,6 +1,6 @@
-bb-u-boot-am57xx-evm-beta (2022.04.20220803.1-0~jammy+20220803) jammy; urgency=low
+bb-u-boot-am57xx-evm-rc (2023.10.20230821.0-0~jammy+20230828) jammy; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * v2023.10-rc3
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Aug 2022 15:49:50 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 28 Aug 2023 18:54:33 -0500
 
