--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,7 +1,7 @@
-bbb.io-kernel (1.20230821.0-0~trixie+20230821) trixie; urgency=low
+bbb.io-kernel (1.20230829.0-0~trixie+20230829) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.5.0-rc7-bone7
+  * linux-image-6.5.0-bone8
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 21 Aug 2023 18:08:53 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 29 Aug 2023 13:41:02 -0500
 
