--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20230829.0-0~bullseye+20230829) bullseye; urgency=low
+bbb.io-kernel (1.20230901.0-0~bullseye+20230901) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.5.0-bone8
+  * linux-image-5.10.168-ti-r71
+  * linux-image-5.10.168-ti-rt-r71
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 29 Aug 2023 13:41:02 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 01 Sep 2023 11:28:27 -0500
 
