--- a/bbb.io-getting-started/suite/bullseye/debian/changelog
+++ b/bbb.io-getting-started/suite/bullseye/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-getting-started (1.20230901.0-0~bookworm+20230901) bookworm; urgency=low
+bbb.io-getting-started (1.20230901.0-0~bullseye+20230901) bullseye; urgency=low
 
   * 1.0.20230901 https://docs.beagleboard.org/latest/
 
