rcnee-internal-testlab (1.20230906.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/jammy/debian/changelog
+++ b/rcnee-internal-testlab/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-rcnee-internal-testlab (1.20230906.1-0~bookworm+20230906) bookworm; urgency=low
+rcnee-internal-testlab (1.20230906.1-0~jammy+20230906) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
