--- a/rcnee-internal-testlab/suite/jammy/debian/install
+++ b/rcnee-internal-testlab/suite/jammy/debian/install
@@ -1,3 +1,4 @@
 debian/80proxy /etc/apt/apt.conf.d/
 debian/debian /etc/sudoers.d/
 debian/docker-check-config.sh /usr/bin/
+debian/lab-update-test-kernel /usr/sbin/
