--- a/rcnee-internal-testlab/suite/trixie/debian/changelog
+++ b/rcnee-internal-testlab/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-rcnee-internal-testlab (1.20230906.1-0~bookworm+20230906) bookworm; urgency=low
+rcnee-internal-testlab (1.20230906.1-0~trixie+20230906) trixie; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
