--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,8 +1,9 @@
-bbb.io-kernel (1.20230901.0-0~bullseye+20230901) bullseye; urgency=low
+bbb.io-kernel (1.20230908.0-0~bullseye+20230908) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r71
-  * linux-image-5.10.168-ti-rt-r71
+  * linux-image-6.3.13-bone17
+  * linux-image-6.4.15-bone15
+  * linux-image-6.5.2-bone9
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 01 Sep 2023 11:28:27 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 08 Sep 2023 15:01:42 -0500
 
