--- a/bb-wlan0-defaults/suite/focal/debian/changelog
+++ b/bb-wlan0-defaults/suite/focal/debian/changelog
@@ -1,6 +1,6 @@
-bb-wlan0-defaults (1.20230414.0-0~focal+20230414) focal; urgency=low
+bb-wlan0-defaults (1.20230929.0-0~focal+20230929) focal; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * udev call hostapd@SoftAp0.service directly
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Apr 2023 12:50:35 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 29 Sep 2023 11:11:35 -0500
 
