--- a/rcnee-internal-testlab/suite/bullseye/debian/changelog
+++ b/rcnee-internal-testlab/suite/bullseye/debian/changelog
@@ -1,6 +1,6 @@
-rcnee-internal-testlab (1.20230906.4-0~bullseye+20230906) bullseye; urgency=low
+rcnee-internal-testlab (1.20230929.0-0~bullseye+20230929) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Move NFS server to TrueNAS on Proxmox
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 06 Sep 2023 20:08:28 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 29 Sep 2023 11:49:06 -0500
 
