--- a/rcnee-internal-testlab/suite/trixie/debian/changelog
+++ b/rcnee-internal-testlab/suite/trixie/debian/changelog
@@ -1,6 +1,6 @@
-rcnee-internal-testlab (1.20230906.4-0~trixie+20230906) trixie; urgency=low
+rcnee-internal-testlab (1.20230929.0-0~trixie+20230929) trixie; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Move NFS server to TrueNAS on Proxmox
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 06 Sep 2023 20:08:28 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 29 Sep 2023 11:49:06 -0500
 
