bbb.io-kernel (1.20230930.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20230914.0-0~trixie+20230914) trixie; urgency=low
+bbb.io-kernel (1.20230930.0-0~trixie+20230930) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.5.3-bone10
+  * linux-image-5.10.168-ti-r72
+  * linux-image-5.10.168-ti-rt-r72
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 14 Sep 2023 11:14:05 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 30 Sep 2023 10:25:37 -0500
 
