--- a/debian-12-libell/suite/bookworm/debian/changelog
+++ b/debian-12-libell/suite/bookworm/debian/changelog
@@ -1,3 +1,9 @@
+ell (0.58-2bbbio2~bookworm+20230930) bookworm; urgency=low
+
+  * 20230930: Skip tests, opps on x15 5.10.x
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 30 Sep 2023 10:52:57 -0500
+
 ell (0.58-2bbbio1~bookworm+20230925) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
