bb-beagle-flasher (1.20231002.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-beagle-flasher/suite/focal/debian/changelog
+++ b/bb-beagle-flasher/suite/focal/debian/changelog
@@ -1,6 +1,8 @@
-bb-beagle-flasher (1.20230710.0-0~focal+20230710) focal; urgency=low
+bb-beagle-flasher (1.20231002.0-0~focal+20231002) focal; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Use /proc/sysrq-trigger to shutdown flasher in single user mode
+  * Add timeout around /proc/sysrq-trigger to log what is happening
+  * Remove beagle-flasher-init-shutdown.service, single user will now shutdown
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 10 Jul 2023 15:54:34 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 02 Oct 2023 14:30:22 -0500
 
