--- a/bb-node-red-installer-debian-11/suite/bookworm/debian/changelog
+++ b/bb-node-red-installer-debian-11/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-node-red-installer (3.1.0.0-0~bullseye+20231003) bullseye; urgency=low
+bb-node-red-installer (3.1.0.0-0~bookworm+20231003) bookworm; urgency=low
 
   * Node-RED - 3.1.0 - https://www.npmjs.com/package/node-red
   * node-red-dashboard - 3.6.0 - https://www.npmjs.com/package/node-red-dashboard
