generic-sys-mods (1.20231003.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/bullseye/debian/changelog
+++ b/generic-sys-mods/suite/bullseye/debian/changelog
@@ -1,6 +1,6 @@
-generic-sys-mods (1.20230414.0-0~bullseye+20230414) bullseye; urgency=low
+generic-sys-mods (1.20231003.0-0~bullseye+20231003) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Call bb-setup-mac-address directly in the usb scripts
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Apr 2023 11:54:48 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Oct 2023 21:23:43 -0500
 
