dphys-swapfile (20100506-7.1bbbio0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/debian-11-dphys-swapfile/suite/bookworm/debian/changelog
+++ b/debian-11-dphys-swapfile/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-dphys-swapfile (20100506-7.1bbbio0~bullseye+20231003) bullseye; urgency=low
+dphys-swapfile (20100506-7.1bbbio0~bookworm+20231003) bookworm; urgency=low
 
   * Reinstate fallocate.patch for ext filesystems
 
