--- a/bb-customizations/suite/bookworm/debian/install
+++ b/bb-customizations/suite/bookworm/debian/install
@@ -1,3 +1,5 @@
+debian/templates/* /etc/bbb.io/templates/
+debian/examples/* /etc/bbb.io/examples/
 debian/bb-symlinks /usr/sbin/
 debian/10-of-symlink.rules /etc/udev/rules.d/
 debian/80-gpio-noroot.rules /etc/udev/rules.d/
@@ -22,9 +24,4 @@ debian/am57xx-pru2_0-fw.sleep /lib/firmware/
 debian/am57xx-pru2_1-fw.sleep /lib/firmware/
 debian/beaglebg.jpg /usr/share/backgrounds/bbb.io/
 debian/beagleboard-logo.svg /usr/share/backgrounds/bbb.io/
-debian/nginx-autoindex /etc/bbb.io/templates/nginx/
-debian/Node-RED-ui.html /etc/bbb.io/templates/nginx/
-debian/Node-RED.html /etc/bbb.io/templates/nginx/
-debian/VSCode.html /etc/bbb.io/templates/nginx/
-debian/xfce4-desktop.xml /etc/bbb.io/templates/xfce4/
 debian/ssh.service /etc/avahi/services/
