--- a/bb-customizations/suite/jammy/debian/install
+++ b/bb-customizations/suite/jammy/debian/install
@@ -1,3 +1,5 @@
+debian/templates/* /etc/bbb.io/templates/
+debian/examples/* /etc/bbb.io/examples/
 debian/bb-symlinks /usr/sbin/
 debian/10-of-symlink.rules /etc/udev/rules.d/
 debian/80-gpio-noroot.rules /etc/udev/rules.d/
