bbb.io-kernel (1.20231121.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,8 +1,26 @@
-bbb.io-kernel (1.20230930.0-0~buster+20230930) buster; urgency=low
+bbb.io-kernel (1.20231121.0-0~buster+20231121) buster; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r72
-  * linux-image-5.10.168-ti-rt-r72
+  * linux-image-5.10.199-armv7-lpae-x77
+  * linux-image-5.10.199-armv7-rt-x77
+  * linux-image-5.10.199-armv7-x77
+  * linux-image-5.10.199-bone77
+  * linux-image-5.10.199-bone-rt-r77
+  * linux-image-5.15.137-armv7-lpae-x41
+  * linux-image-5.15.137-armv7-rt-x41
+  * linux-image-5.15.137-armv7-x41
+  * linux-image-5.15.137-bone41
+  * linux-image-5.15.137-bone-rt-r41
+  * linux-image-5.16.20-bone29
+  * linux-image-5.17.15-bone20
+  * linux-image-5.18.19-bone16
+  * linux-image-5.19.17-bone18
+  * linux-image-5.4.257-armv7-lpae-x68
+  * linux-image-5.4.257-armv7-rt-x68
+  * linux-image-5.4.257-armv7-x68
+  * linux-image-5.4.257-bone68
+  * linux-image-5.4.257-bone-rt-r68
+  * linux-image-6.0.19-bone15
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 30 Sep 2023 10:25:37 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 21 Nov 2023 08:35:36 -0600
 
