--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,16 +1,21 @@
-bbb.io-kernel (1.20231121.0-0~bookworm+20231121) bookworm; urgency=low
+bbb.io-kernel (1.20231123.0-0~bookworm+20231123) bookworm; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.199-armv7-lpae-x77
-  * linux-image-5.10.199-armv7-rt-x77
-  * linux-image-5.10.199-armv7-x77
-  * linux-image-5.10.199-bone77
-  * linux-image-5.10.199-bone-rt-r77
-  * linux-image-5.15.137-armv7-lpae-x41
-  * linux-image-5.15.137-armv7-rt-x41
-  * linux-image-5.15.137-armv7-x41
-  * linux-image-5.15.137-bone41
-  * linux-image-5.15.137-bone-rt-r41
+  * linux-image-6.1.59-armv7-lpae-x1
+  * linux-image-6.1.59-armv7-rt-x1
+  * linux-image-6.1.59-armv7-x1
+  * linux-image-6.1.59-bone24
+  * linux-image-6.1.59-bone-rt-r24
+  * linux-image-6.2.16-bone15
+  * linux-image-6.3.13-bone18
+  * linux-image-6.4.16-bone16
+  * linux-image-6.5.12-bone11
+  * linux-image-6.6.0-armv7-rt-x2
+  * linux-image-6.6.0-bone-rt-r2
+  * linux-image-6.6.2-armv7-lpae-x2
+  * linux-image-6.6.2-armv7-x2
+  * linux-image-6.6.2-bone2
+  * linux-image-6.7.0-rc2-bone2
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 21 Nov 2023 08:35:36 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 23 Nov 2023 17:47:29 -0600
 
