bbb.io-kernel (1.20231128.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,21 +1,9 @@
-bbb.io-kernel (1.20231123.0-0~focal+20231123) focal; urgency=low
+bbb.io-kernel (1.20231128.0-0~focal+20231128) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-5.19.17-bone18
-  * linux-image-6.1.59-armv7-lpae-x1
-  * linux-image-6.1.59-armv7-rt-x1
-  * linux-image-6.1.59-armv7-x1
-  * linux-image-6.1.59-bone24
-  * linux-image-6.1.59-bone-rt-r24
-  * linux-image-6.3.13-bone18
-  * linux-image-6.4.16-bone16
-  * linux-image-6.5.12-bone11
-  * linux-image-6.6.0-armv7-rt-x2
-  * linux-image-6.6.0-bone-rt-r2
-  * linux-image-6.6.2-armv7-lpae-x2
-  * linux-image-6.6.2-armv7-x2
-  * linux-image-6.6.2-bone2
-  * linux-image-6.7.0-rc2-bone2
+  * linux-image-6.1.46-ti-r10
+  * linux-image-6.1.46-ti-rt-r10
+  * linux-image-6.7.0-rc3-bone3
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 23 Nov 2023 17:47:29 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 28 Nov 2023 08:50:33 -0600
 
