--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,36 +1,9 @@
-bbb.io-kernel (1.20231123.0-0~buster+20231123) buster; urgency=low
+bbb.io-kernel (1.20231128.0-0~buster+20231128) buster; urgency=low
 
   * Kernel Updates
-  * linux-image-4.19.280-armv7-lpae-x76
-  * linux-image-4.19.280-armv7-rt-x76
-  * linux-image-4.19.280-armv7-x76
-  * linux-image-4.19.280-bone-rt-r76
-  * linux-image-5.10.199-bone77
-  * linux-image-5.14.21-bone31
-  * linux-image-5.15.137-bone41
-  * linux-image-5.16.20-bone29
-  * linux-image-5.17.15-bone20
-  * linux-image-5.18.19-bone16
-  * linux-image-5.19.17-bone18
-  * linux-image-5.4.257-armv7-lpae-x68
-  * linux-image-5.4.257-armv7-rt-x68
-  * linux-image-5.4.257-armv7-x68
-  * linux-image-5.4.257-bone-rt-r68
-  * linux-image-6.0.19-bone15
-  * linux-image-6.1.59-armv7-lpae-x1
-  * linux-image-6.1.59-armv7-rt-x1
-  * linux-image-6.1.59-armv7-x1
-  * linux-image-6.1.59-bone24
-  * linux-image-6.1.59-bone-rt-r24
-  * linux-image-6.3.13-bone18
-  * linux-image-6.4.16-bone16
-  * linux-image-6.5.12-bone11
-  * linux-image-6.6.0-armv7-rt-x2
-  * linux-image-6.6.0-bone-rt-r2
-  * linux-image-6.6.2-armv7-lpae-x2
-  * linux-image-6.6.2-armv7-x2
-  * linux-image-6.6.2-bone2
-  * linux-image-6.7.0-rc2-bone2
+  * linux-image-6.1.46-ti-r10
+  * linux-image-6.1.46-ti-rt-r10
+  * linux-image-6.7.0-rc3-bone3
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 23 Nov 2023 17:47:29 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 28 Nov 2023 08:50:33 -0600
 
