--- a/apindex/suite/bookworm/debian/changelog
+++ b/apindex/suite/bookworm/debian/changelog
@@ -1,6 +1,6 @@
-bb-u-boot-am335x-evm (2022.04.20220602.2-0~bookworm+20230804) bookworm; urgency=low
+apindex (2.2-1.20230319.0-0~bookworm+20231128) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Aug 2023 13:48:26 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 28 Nov 2023 09:14:19 -0600
 
