--- a/apindex/suite/jammy/debian/changelog
+++ b/apindex/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-apindex (2.2-1.20230319.4-0~bookworm+20231128) bookworm; urgency=low
+apindex (2.2-1.20230319.4-0~jammy+20231128) jammy; urgency=low
 
   * apindex for docker.io builders
 
