--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,8 +1,7 @@
-bbb.io-kernel (1.20231201.0-0~trixie+20231201) trixie; urgency=low
+bbb.io-kernel (1.20231204.0-0~trixie+20231204) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.46-ti-r13
-  * linux-image-6.1.46-ti-rt-r13
+  * linux-image-6.7.0-rc4-bone4
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 01 Dec 2023 11:25:10 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 04 Dec 2023 22:24:37 -0600
 
