--- a/rcnee-internal-testlab/suite/bullseye/debian/changelog
+++ b/rcnee-internal-testlab/suite/bullseye/debian/changelog
@@ -1,6 +1,7 @@
-rcnee-internal-testlab (1.20230929.1-0~bullseye+20230929) bullseye; urgency=low
+rcnee-internal-testlab (1.20231205.0-0~bullseye+20231205) bullseye; urgency=low
 
   * Move NFS server to TrueNAS on Proxmox
+  * add 39/40 ci for can testing
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 29 Sep 2023 13:44:10 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 05 Dec 2023 16:11:52 -0600
 
