bbb.io-keyring (1.20231206.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-keyring/suite/trixie/debian/changelog
+++ b/bbb.io-keyring/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-keyring (1.20231206.0-0~bookworm+20231206) bookworm; urgency=low
+bbb.io-keyring (1.20231206.0-0~trixie+20231206) trixie; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
