--- a/bbb.io-keyring/suite/noble/debian/changelog
+++ b/bbb.io-keyring/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-keyring (1.20231206.0-0~bookworm+20231206) bookworm; urgency=low
+bbb.io-keyring (1.20231206.0-0~noble+20231206) noble; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
