bb-u-boot-am335x-evm (2022.04.20220602.3)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004-2204/suite/noble/debian/changelog
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004-2204/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am335x-evm (2022.04.20220602.3-0~jammy+20231207) jammy; urgency=low
+bb-u-boot-am335x-evm (2022.04.20220602.3-0~noble+20231207) noble; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
