--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004-2204/suite/trixie/debian/changelog
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004-2204/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am335x-evm (2022.04.20220602.3-0~jammy+20231207) jammy; urgency=low
+bb-u-boot-am335x-evm (2022.04.20220602.3-0~trixie+20231207) trixie; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
