bb-u-boot-am57xx-evm (2022.04.20220823.2)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am57xx-evm/suite/trixie/debian/changelog
+++ b/bb-u-boot-am57xx-evm/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am57xx-evm (2022.04.20220823.2-0~bullseye+20231207) bullseye; urgency=low
+bb-u-boot-am57xx-evm (2022.04.20220823.2-0~trixie+20231207) trixie; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
