--- a/bb-node-red-installer-debian-11/suite/trixie/debian/changelog
+++ b/bb-node-red-installer-debian-11/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bb-node-red-installer (3.1.2.0-0~bullseye+20231207) bullseye; urgency=low
+bb-node-red-installer (3.1.2.0-0~trixie+20231207) trixie; urgency=low
 
   * Node-RED - 3.1.2 - https://www.npmjs.com/package/node-red
   * node-red-dashboard - 3.6.2 - https://www.npmjs.com/package/node-red-dashboard
