bb-node-red-installer (3.1.2.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-node-red-installer-debian-11/suite/bookworm/debian/changelog
+++ b/bb-node-red-installer-debian-11/suite/bookworm/debian/changelog
@@ -1,7 +1,8 @@
-bb-node-red-installer (3.1.2.0-0~bookworm+20231207) bookworm; urgency=low
+bb-node-red-installer (3.1.2.1-0~bookworm+20231207) bookworm; urgency=low
 
   * Node-RED - 3.1.2 - https://www.npmjs.com/package/node-red
   * node-red-dashboard - 3.6.2 - https://www.npmjs.com/package/node-red-dashboard
+  * nodejs - 16.20.2 - https://nodejs.org/dist/latest-v16.x/
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 11:50:43 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 12:27:02 -0600
 
