--- a/bb-beagle-flasher/suite/bookworm/debian/changelog
+++ b/bb-beagle-flasher/suite/bookworm/debian/changelog
@@ -1,8 +1,9 @@
-bb-beagle-flasher (1.20231006.1-0~bookworm+20231006) bookworm; urgency=low
+bb-beagle-flasher (1.20231207.0-0~bookworm+20231207) bookworm; urgency=low
 
   * Use /proc/sysrq-trigger to shutdown flasher in single user mode
   * Add timeout around /proc/sysrq-trigger to log what is happening
   * Remove beagle-flasher-init-shutdown.service, single user will now shutdown
+  * e2fsprogs (1.47.0) disable orphan_file, needs v5.15.x kernel
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 06 Oct 2023 15:18:57 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 16:13:28 -0600
 
