--- a/bb-beagle-flasher/suite/trixie/debian/changelog
+++ b/bb-beagle-flasher/suite/trixie/debian/changelog
@@ -1,4 +1,9 @@
+bb-beagle-flasher (1.20231207.0-0~trixie+20231207) trixie; urgency=low
+
   * Use /proc/sysrq-trigger to shutdown flasher in single user mode
   * Add timeout around /proc/sysrq-trigger to log what is happening
   * Remove beagle-flasher-init-shutdown.service, single user will now shutdown
   * e2fsprogs (1.47.0) disable orphan_file, needs v5.15.x kernel
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 16:13:28 -0600
+
