--- a/debian-12-libell/suite/bookworm/debian/changelog
+++ b/debian-12-libell/suite/bookworm/debian/changelog
@@ -1,8 +1,35 @@
-ell (0.58-2bbbio1~bookworm+20231002) bookworm; urgency=low
+ell (0.61-1bbbio0~bookworm+20231207) bookworm; urgency=low
 
-  * 20230930: Skip tests, opps on x15 5.10.x
+  * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 02 Oct 2023 13:54:17 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 17:04:00 -0600
+
+ell (0.61-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release(s)
+
+  [ Jonas Smedegaard ]
+  * update symbols: added 3 symbols
+
+ -- Jonas Smedegaard <dr@jones.dk>  Thu, 30 Nov 2023 11:33:21 +0100
+
+ell (0.59-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release
+
+  [ Nobuhiro Iwamatsu ]
+  * d/copyright: Drop license paragraph of build-aux
+  * d/copyright: Drop license paragraph of build-aux
+  * d/copyright: Drop license paragraph of aclocal.m4
+  * d/copyright: Drop license paragraph of configure
+  * d/copyright: Drop license paragraph of Makefile.in
+  * d/libell0.symbols: Added 6 symbols
+  * d/copyright: Drop license sentences that are not referenced
+  * d/source/lintian-overrides: Update
+
+ -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Mon, 16 Oct 2023 11:26:56 +0900
 
 ell (0.58-2) unstable; urgency=medium
 
