bbb.io-getting-started (1.20231207.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-getting-started/suite/buster/debian/changelog
+++ b/bbb.io-getting-started/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-getting-started (1.20231207.0-0~jammy+20231208) jammy; urgency=low
+bbb.io-getting-started (1.20231207.0-0~buster+20231208) buster; urgency=low
 
   * 1.0.20231207 https://docs.beagleboard.org/latest/
 
