bb-beagle-flasher (1.20231211.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-beagle-flasher/suite/bookworm/debian/changelog
+++ b/bb-beagle-flasher/suite/bookworm/debian/changelog
@@ -1,9 +1,9 @@
-bb-beagle-flasher (1.20231207.0-0~bookworm+20231207) bookworm; urgency=low
+bb-beagle-flasher (1.20231211.0-0~bookworm+20231211) bookworm; urgency=low
 
   * Use /proc/sysrq-trigger to shutdown flasher in single user mode
   * Add timeout around /proc/sysrq-trigger to log what is happening
   * Remove beagle-flasher-init-shutdown.service, single user will now shutdown
-  * e2fsprogs (1.47.0) disable orphan_file, needs v5.15.x kernel
+  * e2fsprogs (1.47.0) disable metadata_csum,64bit,orphan_file, needs v5.15.x kernel
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 16:13:28 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 11 Dec 2023 17:38:22 -0600
 
