--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-kernel (1.20231213.0-0~trixie+20231213) trixie; urgency=low
+bbb.io-kernel (1.20231213.0-0~noble+20231213) noble; urgency=low
 
   * Kernel Updates
   * linux-image-6.7.0-rc5-bone5
