--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,7 +1,13 @@
-bbb.io-kernel (1.20231213.0-0~focal+20231213) focal; urgency=low
+bbb.io-kernel (1.20231215.0-0~focal+20231215) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-6.7.0-rc5-bone5
+  * linux-image-6.4.16-bone17
+  * linux-image-6.5.13-bone12
+  * linux-image-6.6.6-armv7-lpae-x3
+  * linux-image-6.6.6-armv7-rt-x3
+  * linux-image-6.6.6-armv7-x3
+  * linux-image-6.6.6-bone3
+  * linux-image-6.6.6-bone-rt-r3
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 13 Dec 2023 10:46:14 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 15 Dec 2023 13:26:29 -0600
 
