--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,8 +1,15 @@
-bbb.io-kernel (1.20231216.0-0~jammy+20231216) jammy; urgency=low
+bbb.io-kernel (1.20231217.0-0~jammy+20231217) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-6.2.16-bone16
-  * linux-image-6.3.13-bone25
+  * linux-image-5.10.168-ti-r74
+  * linux-image-5.10.168-ti-rt-r74
+  * linux-image-6.1.46-ti-r14
+  * linux-image-6.1.46-ti-rt-r14
+  * linux-image-6.1.67-armv7-lpae-x2
+  * linux-image-6.1.67-armv7-rt-x2
+  * linux-image-6.1.67-armv7-x2
+  * linux-image-6.1.67-bone25
+  * linux-image-6.1.67-bone-rt-r25
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 16 Dec 2023 13:51:24 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Sun, 17 Dec 2023 15:22:19 -0600
 
