--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,19 +1,9 @@
-bbb.io-kernel (1.20231217.0-0~noble+20231217) noble; urgency=low
+bbb.io-kernel (1.20231219.0-0~noble+20231219) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r74
-  * linux-image-5.10.168-ti-rt-r74
-  * linux-image-6.1.46-ti-r14
-  * linux-image-6.1.46-ti-rt-r14
-  * linux-image-6.1.67-armv7-lpae-x2
-  * linux-image-6.1.67-armv7-rt-x2
-  * linux-image-6.1.67-armv7-x2
-  * linux-image-6.1.67-bone25
-  * linux-image-6.1.67-bone-rt-r25
-  * linux-image-6.2.16-bone16
-  * linux-image-6.3.13-bone25
-  * linux-image-6.4.16-bone17
-  * linux-image-6.5.13-bone12
+  * linux-image-6.1.46-ti-r15
+  * linux-image-6.1.46-ti-rt-r15
+  * linux-image-6.7.0-rc6-bone6
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sun, 17 Dec 2023 15:22:19 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 19 Dec 2023 09:00:19 -0600
 
