bbb.io-kernel (1.20240103.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,8 +1,13 @@
-bbb.io-kernel (1.20231229.0-0~bullseye+20231229) bullseye; urgency=low
+bbb.io-kernel (1.20240103.0-0~bullseye+20240103) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r75
-  * linux-image-5.10.168-ti-rt-r75
+  * linux-image-6.5.13-bone13
+  * linux-image-6.6.7-armv7-lpae-x4
+  * linux-image-6.6.7-armv7-rt-x4
+  * linux-image-6.6.7-armv7-x4
+  * linux-image-6.6.7-bone4
+  * linux-image-6.6.7-bone-rt-r4
+  * linux-image-6.7.0-rc8-bone7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 29 Dec 2023 10:20:56 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jan 2024 10:24:22 -0600
 
