--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,13 +1,16 @@
-bbb.io-kernel (1.20240103.0-0~buster+20240103) buster; urgency=low
+bbb.io-kernel (1.20240105.0-0~buster+20240105) buster; urgency=low
 
   * Kernel Updates
-  * linux-image-6.5.13-bone13
-  * linux-image-6.6.7-armv7-lpae-x4
-  * linux-image-6.6.7-armv7-rt-x4
-  * linux-image-6.6.7-armv7-x4
-  * linux-image-6.6.7-bone4
-  * linux-image-6.6.7-bone-rt-r4
-  * linux-image-6.7.0-rc8-bone7
+  * linux-image-6.1.46-ti-r19
+  * linux-image-6.1.46-ti-rt-r19
+  * linux-image-6.1.69-armv7-lpae-x3
+  * linux-image-6.1.69-armv7-rt-x3
+  * linux-image-6.1.69-armv7-x3
+  * linux-image-6.1.69-bone26
+  * linux-image-6.1.69-bone-rt-r26
+  * linux-image-6.2.16-bone17
+  * linux-image-6.3.13-bone27
+  * linux-image-6.4.16-bone19
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jan 2024 10:24:22 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 05 Jan 2024 09:25:59 -0600
 
