rcnee-internal-testlab (1.20240105.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/noble/debian/changelog
+++ b/rcnee-internal-testlab/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-rcnee-internal-testlab (1.20240105.0-0~bullseye+20240105) bullseye; urgency=low
+rcnee-internal-testlab (1.20240105.0-0~noble+20240105) noble; urgency=low
 
   * Move NFS server to TrueNAS on Proxmox
   * add 39/40 ci for can testing
