generic-sys-mods (1.20240111.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/trixie/debian/changelog
+++ b/generic-sys-mods/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-generic-sys-mods (1.20240111.0-0~focal+20240111) focal; urgency=low
+generic-sys-mods (1.20240111.0-0~trixie+20240111) trixie; urgency=low
 
   * Call bb-setup-mac-address directly in the usb scripts
 
