--- a/generic-sys-mods/suite/noble/debian/changelog
+++ b/generic-sys-mods/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-generic-sys-mods (1.20240111.0-0~focal+20240111) focal; urgency=low
+generic-sys-mods (1.20240111.0-0~noble+20240111) noble; urgency=low
 
   * Call bb-setup-mac-address directly in the usb scripts
 
