bbb.io-kernel (1.20240114.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,20 +1,8 @@
-bbb.io-kernel (1.20240109.0-0~noble+20240109) noble; urgency=low
+bbb.io-kernel (1.20240114.0-0~noble+20240114) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.70-armv7-lpae-x4
-  * linux-image-6.1.70-armv7-rt-x4
-  * linux-image-6.1.70-armv7-x4
-  * linux-image-6.1.70-bone27
-  * linux-image-6.1.70-bone-rt-r27
-  * linux-image-6.2.16-bone18
-  * linux-image-6.3.13-bone28
-  * linux-image-6.4.16-bone20
-  * linux-image-6.6.10-armv7-lpae-x5
-  * linux-image-6.6.10-armv7-rt-x5
-  * linux-image-6.6.10-armv7-x5
-  * linux-image-6.6.10-bone5
-  * linux-image-6.6.10-bone-rt-r5
-  * linux-image-6.7.0-bone8
+  * linux-image-6.1.69-ti-r20
+  * linux-image-6.1.69-ti-rt-r20
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 09 Jan 2024 09:32:29 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Sun, 14 Jan 2024 10:24:33 -0600
 
