--- a/bb-u-boot-am57xx-evm/suite/buster/debian/install
+++ b/bb-u-boot-am57xx-evm/suite/buster/debian/install
@@ -1,5 +1,5 @@
 debian/install.sh /opt/u-boot/bb-u-boot-am57xx-evm
 debian/install-mmcblk0.sh /opt/u-boot/bb-u-boot-am57xx-evm
 debian/install-mmcblk1.sh /opt/u-boot/bb-u-boot-am57xx-evm
-u-boot/MLO /opt/u-boot/bb-u-boot-am57xx-evm
-u-boot/u-boot-dtb.img /opt/u-boot/bb-u-boot-am57xx-evm
+tmp/pkg/MLO /opt/u-boot/bb-u-boot-am57xx-evm
+tmp/pkg/u-boot-dtb.img /opt/u-boot/bb-u-boot-am57xx-evm
