bbb.io-kernel (1.20240115.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,8 +1,21 @@
-bbb.io-kernel (1.20240114.0-0~trixie+20240114) trixie; urgency=low
+bbb.io-kernel (1.20240115.0-0~trixie+20240115) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.69-ti-r20
-  * linux-image-6.1.69-ti-rt-r20
+  * linux-image-6.1.70-armv7-lpae-x5
+  * linux-image-6.1.70-armv7-rt-x5
+  * linux-image-6.1.70-armv7-x5
+  * linux-image-6.1.70-bone28
+  * linux-image-6.1.70-bone-rt-r28
+  * linux-image-6.2.16-bone19
+  * linux-image-6.3.13-bone29
+  * linux-image-6.4.16-bone21
+  * linux-image-6.5.13-bone14
+  * linux-image-6.6.10-armv7-lpae-x6
+  * linux-image-6.6.10-armv7-rt-x6
+  * linux-image-6.6.10-armv7-x6
+  * linux-image-6.6.10-bone6
+  * linux-image-6.6.10-bone-rt-r6
+  * linux-image-6.7.0-bone9
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sun, 14 Jan 2024 10:24:33 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jan 2024 14:50:15 -0600
 
