--- a/debian-12-iwd/suite/bookworm/debian/changelog
+++ b/debian-12-iwd/suite/bookworm/debian/changelog
@@ -1,3 +1,9 @@
+iwd (2.13-1bbbio2~bookworm+20240115) bookworm; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jan 2024 16:16:02 -0600
+
 iwd (2.13-1bbbio0~bookworm+20240115) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
