ti-pru-cgt-v2.3 (2.3.3.0-0bbbio0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/ti-pru-cgt-v2.3/suite/bookworm/debian/changelog
+++ b/ti-pru-cgt-v2.3/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-ti-pru-cgt-v2.3 (2.3.3.0-0bbbio0~bullseye+20240117) bullseye; urgency=low
+ti-pru-cgt-v2.3 (2.3.3.0-0bbbio0~bookworm+20240117) bookworm; urgency=low
 
   * 2.3.3 - PRU-CGT — PRU code generation tools - compiler
 
