--- a/ti-pru-software-v6.3/suite/bookworm/debian/changelog
+++ b/ti-pru-software-v6.3/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-ti-pru-software-v6.3 (6.3.0-0bbbio0~bullseye+20240117) bullseye; urgency=low
+ti-pru-software-v6.3 (6.3.0-0bbbio0~bookworm+20240117) bookworm; urgency=low
 
   * Rebuild ti-pru-software-v6.3_6.3.0-0 for repos.rcn-ee.com
 
