ti-pru-software-v6.3 (6.3.0-0bbbio1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/ti-pru-software-v6.3/suite/trixie/debian/changelog
+++ b/ti-pru-software-v6.3/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-ti-pru-software-v6.3 (6.3.0-0bbbio1~bookworm+20240117) bookworm; urgency=low
+ti-pru-software-v6.3 (6.3.0-0bbbio1~trixie+20240117) trixie; urgency=low
 
   * Rebuild ti-pru-software-v6.3_6.3.0-0 for repos.rcn-ee.com
 
