--- a/debian-12-libusbgx/suite/bookworm/debian/changelog
+++ b/debian-12-libusbgx/suite/bookworm/debian/changelog
@@ -1,24 +1,6 @@
-libusbgx (0.2.0-git20210811.5-3bbbio1~bookworm+20240118) bookworm; urgency=low
+libusbgx (0.2.0-git20210811.6-0~bookworm+20240118) bookworm; urgency=low
 
-  * Rebuild libusbgx_0.2.0-3 for repos.rcn-ee.com
+  * Rebuild libusbgx_0.2.0-git20210811.6-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 18 Jan 2024 12:48:57 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 18 Jan 2024 12:55:01 -0600
 
-libusbgx (0.2.0-3) unstable; urgency=medium
-
-  * Fix clean target (Closes: #1049287)
-  * Fix description of -dev package (Closes: #1050382)
-
- -- Manuel Traut <manut@mecka.net>  Mon, 28 Aug 2023 15:49:05 +0200
-
-libusbgx (0.2.0-2) unstable; urgency=medium
-
-  * source-only reupload
-
- -- Manuel Traut <manut@mecka.net>  Mon, 17 Oct 2022 12:07:04 +0200
-
-libusbgx (0.2.0-1) unstable; urgency=medium
-
-  * Initial release. (Closes: #1016019)
-
- -- Manuel Traut <manut@mecka.net>  Sun, 31 Jul 2022 18:13:11 +0200
