bbb.io-kernel (1.20240119.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,21 +1,8 @@
-bbb.io-kernel (1.20240115.0-0~buster+20240115) buster; urgency=low
+bbb.io-kernel (1.20240119.0-0~buster+20240119) buster; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.70-armv7-lpae-x5
-  * linux-image-6.1.70-armv7-rt-x5
-  * linux-image-6.1.70-armv7-x5
-  * linux-image-6.1.70-bone28
-  * linux-image-6.1.70-bone-rt-r28
-  * linux-image-6.2.16-bone19
-  * linux-image-6.3.13-bone29
-  * linux-image-6.4.16-bone21
-  * linux-image-6.5.13-bone14
-  * linux-image-6.6.10-armv7-lpae-x6
-  * linux-image-6.6.10-armv7-rt-x6
-  * linux-image-6.6.10-armv7-x6
-  * linux-image-6.6.10-bone6
-  * linux-image-6.6.10-bone-rt-r6
-  * linux-image-6.7.0-bone9
+  * linux-image-6.1.69-ti-r21
+  * linux-image-6.1.69-ti-rt-r21
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jan 2024 14:50:15 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 19 Jan 2024 10:17:01 -0600
 
