bbb.io-kernel (1.20240123.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,20 +1,9 @@
-bbb.io-kernel (1.20240122.0-0~jammy+20240122) jammy; urgency=low
+bbb.io-kernel (1.20240123.0-0~jammy+20240123) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-rt-r76
-  * linux-image-6.1.73-armv7-lpae-x6
-  * linux-image-6.1.73-armv7-rt-x6
-  * linux-image-6.1.73-armv7-x6
-  * linux-image-6.1.73-bone-rt-r29
-  * linux-image-6.2.16-bone20
-  * linux-image-6.3.13-bone30
-  * linux-image-6.4.16-bone22
-  * linux-image-6.5.13-bone15
-  * linux-image-6.6.12-armv7-lpae-x7
-  * linux-image-6.6.12-armv7-rt-x7
-  * linux-image-6.6.12-armv7-x7
-  * linux-image-6.6.12-bone7
-  * linux-image-6.6.12-bone-rt-r7
+  * linux-image-5.10.168-ti-r76
+  * linux-image-6.7.1-bone10
+  * linux-image-6.8.0-rc1-bone1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 22 Jan 2024 11:06:03 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 23 Jan 2024 10:08:22 -0600
 
