bbb.io-kernel (1.20240130.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,9 +1,10 @@
-bbb.io-kernel (1.20240123.0-0~focal+20240123) focal; urgency=low
+bbb.io-kernel (1.20240130.0-0~focal+20240130) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r76
-  * linux-image-6.7.1-bone10
-  * linux-image-6.8.0-rc1-bone1
+  * linux-image-6.1.69-ti-r22
+  * linux-image-6.1.69-ti-rt-r22
+  * linux-image-6.7.2-bone11
+  * linux-image-6.8.0-rc2-bone2
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 23 Jan 2024 10:08:22 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 30 Jan 2024 09:39:21 -0600
 
