bbb.io-kernel (1.20240229.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,18 +1,8 @@
-bbb.io-kernel (1.20240227.0-0~bookworm+20240227) bookworm; urgency=low
+bbb.io-kernel (1.20240229.0-0~bookworm+20240229) bookworm; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.77-armv7-lpae-x7
-  * linux-image-6.1.77-armv7-rt-x7
-  * linux-image-6.1.77-armv7-x7
-  * linux-image-6.1.77-bone30
-  * linux-image-6.1.77-bone-rt-r30
-  * linux-image-6.6.15-armv7-lpae-x9
-  * linux-image-6.6.15-armv7-rt-x9
-  * linux-image-6.6.15-armv7-x9
-  * linux-image-6.6.15-bone9
-  * linux-image-6.6.15-bone-rt-r9
-  * linux-image-6.7.6-bone14
-  * linux-image-6.8.0-rc6-bone5
+  * linux-image-5.10.168-ti-r77
+  * linux-image-5.10.168-ti-rt-r77
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 27 Feb 2024 09:09:30 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 29 Feb 2024 10:13:57 -0600
 
