--- a/debian-12-iwd/suite/bookworm/debian/changelog
+++ b/debian-12-iwd/suite/bookworm/debian/changelog
@@ -1,14 +1,28 @@
-iwd (2.13-1bbbio2~bookworm+20240115) bookworm; urgency=low
+iwd (2.15-1bbbio1~bookworm+20240314) bookworm; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild iwd_2.15-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jan 2024 16:16:02 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 14 Mar 2024 11:35:51 -0500
 
-iwd (2.13-1bbbio0~bookworm+20240115) bookworm; urgency=low
+iwd (2.15-1) unstable; urgency=medium
 
-  * Rebuild for repos.rcn-ee.com
+  [ upstream ]
+  * new release
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jan 2024 15:41:53 -0600
+  [ Jonas Smedegaard ]
+  * tighten build-dependency on libell-dev
+
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 28 Feb 2024 07:58:48 +0100
+
+iwd (2.14-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release
+
+  [ Jonas Smedegaard ]
+  * update copyright info: update coverage
+
+ -- Jonas Smedegaard <dr@jones.dk>  Sun, 11 Feb 2024 19:05:31 +0100
 
 iwd (2.13-1) unstable; urgency=medium
 
