bbb.io-kernel (1.20240320.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,8 +1,20 @@
-bbb.io-kernel (1.20240229.0-0~focal+20240229) focal; urgency=low
+bbb.io-kernel (1.20240320.0-0~focal+20240320) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r77
-  * linux-image-5.10.168-ti-rt-r77
+  * linux-image-6.1.69-ti-r26
+  * linux-image-6.1.69-ti-rt-r26
+  * linux-image-6.1.80-armv7-lpae-x8
+  * linux-image-6.1.80-armv7-rt-x8
+  * linux-image-6.1.80-armv7-x8
+  * linux-image-6.1.80-bone31
+  * linux-image-6.1.80-bone-rt-r31
+  * linux-image-6.6.20-armv7-lpae-x11
+  * linux-image-6.6.20-armv7-rt-x11
+  * linux-image-6.6.20-armv7-x11
+  * linux-image-6.6.20-bone11
+  * linux-image-6.6.20-bone-rt-r11
+  * linux-image-6.7.9-bone16
+  * linux-image-6.8.0-bone7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 29 Feb 2024 10:13:57 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 20 Mar 2024 09:57:32 -0500
 
